--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ asgiref==3.8.1
 Django==5.1.2
 django-cors-headers==4.5.0
 djangorestframework==3.15.2
+pillow==11.0.0
 sqlparse==0.5.1
 tzdata==2024.2
