--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 asgiref==3.8.1
+botocore==1.35.54
 dj-database-url==2.3.0
 Django==5.1.2
 django-cors-headers==4.5.0
 djangorestframework==3.15.2
 gunicorn==23.0.0
+jmespath==1.0.1
 packaging==24.1
 pillow==11.0.0
 psycopg2-binary==2.9.10
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+s3transfer==0.10.3
+six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
